# five-in-a-row

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  GUIDE.md  README.md  REPORT.typ  board.cpp  board.h  chessboardwidget.cpp  chessboardwidget.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
